[gd_scene load_steps=13 format=3 uid="uid://dgh51yyfcxmj5"]

[ext_resource type="Script" path="res://Items/Rotator_Platform.gd" id="1_lfiob"]
[ext_resource type="Material" uid="uid://cp6jeysr1txt5" path="res://Items/Default_Material.tres" id="2_qwea2"]

[sub_resource type="Animation" id="Animation_ee8q1"]
resource_name = "Push"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.571]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ba252"]
_data = {
"Spin": SubResource("Animation_ee8q1")
}

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_ic1yk"]
bounce = 1.0
absorbent = true

[sub_resource type="CylinderShape3D" id="CylinderShape3D_diel2"]
height = 0.05
radius = 0.9

[sub_resource type="CylinderMesh" id="CylinderMesh_lbvtw"]
top_radius = 0.9
bottom_radius = 0.9
height = 0.05

[sub_resource type="CylinderShape3D" id="CylinderShape3D_kwugj"]
height = 0.15
radius = 0.9

[sub_resource type="BoxShape3D" id="BoxShape3D_dh63n"]
size = Vector3(1.8, 0.3, 0.05)

[sub_resource type="BoxMesh" id="BoxMesh_4y73y"]
size = Vector3(1.8, 0.3, 0.05)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_18v2e"]
height = 0.3
radius = 0.1

[sub_resource type="CylinderMesh" id="CylinderMesh_nj3qe"]
top_radius = 0.1
bottom_radius = 0.1
height = 0.3

[node name="Rotator_Platform" type="Node3D" groups=["item"]]
script = ExtResource("1_lfiob")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Rotator_Platform_Moving")
reset_on_save = false
playback_process_mode = 0
speed_scale = 8.0
libraries = {
"": SubResource("AnimationLibrary_ba252")
}

[node name="Power_Label" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.02, 0)
text = "99"
font_size = 224
outline_size = 77

[node name="Rotator_Platform_Moving" type="AnimatableBody3D" parent="."]
transform = Transform3D(-0.000203653, 0, 1, 0, 1, 0, -1, 0, -0.000203653, 0, 0, 0)
physics_material_override = SubResource("PhysicsMaterial_ic1yk")
sync_to_physics = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Rotator_Platform_Moving"]
visible = false
shape = SubResource("CylinderShape3D_diel2")
disabled = true

[node name="Rotation_Platform" type="MeshInstance3D" parent="Rotator_Platform_Moving/CollisionShape3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0045166, 0, 0.00231934)
visible = false
mesh = SubResource("CylinderMesh_lbvtw")
skeleton = NodePath("../..")
surface_material_override/0 = ExtResource("2_qwea2")

[node name="Ball_Detection" type="Area3D" parent="Rotator_Platform_Moving"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0303736, 0)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Rotator_Platform_Moving/Ball_Detection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.11, 0)
shape = SubResource("CylinderShape3D_kwugj")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="Rotator_Platform_Moving"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.15, 0)
shape = SubResource("BoxShape3D_dh63n")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Rotator_Platform_Moving/CollisionShape3D3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -8.70004e-05, 0)
mesh = SubResource("BoxMesh_4y73y")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Rotator_Platform_Moving"]
transform = Transform3D(-4.3714e-08, 0, 1, 0, 1, 0, -1, 0, -4.3714e-08, 0, 0.15, 0)
shape = SubResource("BoxShape3D_dh63n")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Rotator_Platform_Moving/CollisionShape3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -8.70004e-05, 0)
mesh = SubResource("BoxMesh_4y73y")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="Rotator_Platform_Moving"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.15, 0)
shape = SubResource("CylinderShape3D_18v2e")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Rotator_Platform_Moving/CollisionShape3D4"]
transform = Transform3D(-0.000203653, 0, -1, 0, 1, 0, 1, 0, -0.000203653, 0, 0, 0)
mesh = SubResource("CylinderMesh_nj3qe")
skeleton = NodePath("../../..")

[connection signal="mouse_entered" from="Rotator_Platform_Moving" to="." method="_on_rotator_platform_moving_mouse_entered"]
[connection signal="mouse_exited" from="Rotator_Platform_Moving" to="." method="_on_rotator_platform_moving_mouse_exited"]
[connection signal="body_entered" from="Rotator_Platform_Moving/Ball_Detection" to="." method="_on_ball_detection_body_entered"]
[connection signal="body_exited" from="Rotator_Platform_Moving/Ball_Detection" to="." method="_on_ball_detection_body_exited"]
